Task #16873: Fix cropped letters in matrixbutton label.

--- a/src/main/webapp/resources/css/arsnova.css
+++ b/src/main/webapp/resources/css/arsnova.css
@@ -432,7 +432,6 @@ html,body {
 	margin-left: 5px;
 	margin-right: 5px;
 	font-size: 1em !important;
-	padding: 5px 0 0 !important;
 	font-weight: normal !important;
 	white-space: normal !important;
 	line-height: 1.1em !important;
